@@ -2,6 +2,6 @@
 #define _zxidvers_h
 #define ZXID_VERSION 0x000063
 #define ZXID_REL "0.63"
-#define ZXID_COMPILE_DATE "1279213137"
-#define ZXID_REV "$Id: 0.63-2-g44c0604 20100702-164220 sampo@jin $"
+#define ZXID_COMPILE_DATE "1279230299"
+#define ZXID_REV "$Id: 0.63-3-gbb94f5f 20100715-170555 sampo@jin $"
 #endif
