@@ -33,10 +33,11 @@ if ($op eq 'license') {
     s/$/\\n\\/gm;
     print <<LICENSE;
 char* license = "\\n\\
-Copyright (c) 2010 Sampo Kellomaki (sampo@iki.fi), All Rights Reserved.\\n\\
-Copyright (c) 2006-2009 Symlabs (symlabs@symlabs.com), All Rights Reserved.\\n\\
-Author: Sampo Kellomaki (sampo@iki.fi), All Rights Reserved.\\n\\
-$_"
+Copyright (c) 2010 Sampo Kellomaki (sampo\@iki.fi), All Rights Reserved.\\n\\
+Copyright (c) 2006-2009 Symlabs (symlabs\@symlabs.com), All Rights Reserved.\\n\\
+Author: Sampo Kellomaki (sampo\@iki.fi), All Rights Reserved.\\n\\
+$_
+";
 LICENSE
 ;
 }
